--- a/apps/api/src/templates/reminder.hbs
+++ b/apps/api/src/templates/reminder.hbs
@@ -6,8 +6,21 @@
   </head>
   <body>
     <h3>Halo {{username}}</h3>
-    <p>Ini adalah pengingat bahwa reservasi Anda di {{property}} akan dimulai
-      besok. Kami berharap Anda memiliki pengalaman yang
-      menyenangkan! Salam, {{username}} </p>
+    <p>
+      Kami ingin mengingatkan Anda bahwa besok adalah waktu check-in untuk
+      transaksi sewa Anda
+    </p>
+    <p> Detail Sewa Anda:</p>
+    <ul>
+      <li>Nama Properti: {{property}}</li>
+      <li>Jam Check-In: 14:00 WIB</li>
+    </ul>
+    <p>
+      Pastikan Anda mempersiapkan segala sesuatu sebelum tiba. Jika ada
+      pertanyaan atau kebutuhan khusus, jangan ragu untuk menghubungi kami.
+    </p>
+    <p>Terima kasih telah memilih Nezztar. Kami berharap Anda menikmati
+      pengalaman menginap Anda! Salam hangat, Tim Nezztar</p>
+
   </body>
 </html>
