--- a/apps/api/src/templates/confirmation.hbs
+++ b/apps/api/src/templates/confirmation.hbs
@@ -18,7 +18,7 @@
       <li>Nama Pemesan: {{username}}</li>
       <li>Tanggal Check-in: {{checkin}}</li>
       <li>Tanggal Check-out: {{checkout}}</li>
-      <li>Jumlah Tamu: </li>
+      <li>Jumlah Tamu: {{guest}}</li>
       <li>Total Pembayaran: {{price}}</li>
     </ul>
     <h6>Tata Cara Penggunaan</h6>
